Verify asyncapi proxy generator ITs